# server-clientHTTP

./: README.md
armhf/: serverHTTP
httpClient/: CMakeLists.txt
httpClient/httpClient/: CMakeLists.txt  client.h  httpClient.cpp  parserCmd.h
serverHTTP/: CMakeLists.txt  CMakePresets.json
serverHTTP/armhf/: CMakeLists.txt
serverHTTP/src/: CMakeLists.txt  log.h  parserCmd.h  server.h  serverMain.cpp
